RESOLVED FIXED115204
Ignore invalid regular expressions for input[pattern].
https://bugs.webkit.org/show_bug.cgi?id=115204
Summary Ignore invalid regular expressions for input[pattern].
Kent Tamura
Reported 2013-04-25 14:15:42 PDT
Ignore invalid regular expressions for input[pattern].
Attachments
Patch (7.54 KB, patch)
2013-04-25 14:20 PDT, Kent Tamura
no flags
Patch 2 (7.49 KB, patch)
2013-04-25 14:41 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-04-25 14:20:42 PDT
Kent Tamura
Comment 2 2013-04-25 14:41:08 PDT
Created attachment 199751 [details] Patch 2 Remove a 'what' comment
WebKit Commit Bot
Comment 3 2013-04-25 15:50:06 PDT
Comment on attachment 199751 [details] Patch 2 Clearing flags on attachment: 199751 Committed r149151: <http://trac.webkit.org/changeset/149151>
WebKit Commit Bot
Comment 4 2013-04-25 15:50:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.